index.css
/* ... */
.clients__text-block {
  -webkit-box-flex: 0;
      -ms-flex: 0 0 33.333%;
          flex: 0 0 33.333%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
}

.clients__title {
  font-weight: 400;
  font-size: 60px;
}

.clients__text {
  font-size: 18px;
  max-width: 400px;
}

.clients__marquee {
  -webkit-box-flex: 0;
      -ms-flex: 0 0 66.667%;
          flex: 0 0 66.667%;
  height: 100px;
  overflow: hidden;
}

.clients__line {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-animation: marquee 20s linear 0s infinite;
          animation: marquee 20s linear 0s infinite;
}

.clients__clients-block {
  -webkit-box-flex: 0;
      -ms-flex: 0 0 33.333%;
          flex: 0 0 33.333%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}

.clients__client {
  padding: 0 10px;
}

@-webkit-keyframes marquee {
  0% {
    -webkit-transform: translateX(0);
            transform: translateX(0);
  }

  100% {
    -webkit-transform: translateX(-2454px);
            transform: translateX(-2454px);
  }
}

@keyframes marquee {
  0% {
    -webkit-transform: translateX(0);
            transform: translateX(0);
  }

  100% {
    -webkit-transform: translateX(-2454px);
            transform: translateX(-2454px);
  }
}

.contact {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  font-family: "Inter";
  font-weight: 300;
  max-width: 1760px;
  width: 100%;
}

.contact__contacts-block {
  padding: 90px 15px;
  -webkit-box-flex: 0;
      -ms-flex: 0 0 33.333%;
          flex: 0 0 33.333%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
}

.contact__form {
  -webkit-box-flex: 0;
      -ms-flex: 0 0 66.667%;
          flex: 0 0 66.667%;
  background-color: #2b2b2b;
  color: #fff;
  position: relative;
  padding: 90px 0 110px 150px;
}

.contact__form::after {
  display: block;
  position: absolute;
  background: #2b2b2b;
  content: "";
  top: 0;
  left: 0;
  height: 100%;
  width: 100vw;
  z-index: -1;
}

.contact__text {
  font-size: 18px;
  margin-bottom: 10px;
}

.contact__text.link,
.contact__text.link:visited {
  color: #000;
}

.contact__text.link:hover,
.contact__text.link:visited:hover {
  text-decoration: underline;
}

.contact__title {
  font-size: 55px;
  font-weight: 400;
  margin-bottom: 28px;
}

.contact__link {
  font-size: 18px;
  text-decoration: underline;
}

.contact__link:hover {
  text-decoration: none;
}

.contact__services {
  border-top: 1px solid rgba(0,0,0,.1);
  margin-top: 25px;
  padding-top: 20px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  row-gap: 10px;
}

.form form {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  row-gap: 60px;
  margin-right: 80px;
}

.form__inputs {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
  -webkit-column-gap: 40px;
     -moz-column-gap: 40px;
          column-gap: 40px;
  row-gap: 40px;
}

.form__left-block {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  row-gap: 40px;
}

.form__right-block .form__input-block {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  height: 100%;
}

.form__left-block,
.form__right-block {
  -webkit-box-flex: 1;
      -ms-flex-positive: 1;
          flex-grow: 1;
}

.form__title {
  padding: 0 20px;
}

.form__text {
  padding: 0 20px;
  margin-bottom: 45px;
  font-size: 24px;
}

.form__input-block {
  padding: 0 20px;
}

.form__input-block p {
  font-size: 20px;
}

.form__input-block input,
.form__input-block textarea {
  outline: none;
  width: 100%;
  border: 0;
  border-bottom: 1px solid rgba(255,255,255,.4);
  background: rgba(0,0,0,0);
  color: #fff;
  padding: 15px 0;
  font-size: 18px;
}

.form__input-block input:focus::-webkit-input-placeholder, .form__input-block textarea:focus::-webkit-input-placeholder {
  color: rgba(0,0,0,0);
}

.form__input-block input:focus::-moz-placeholder, .form__input-block textarea:focus::-moz-placeholder {
  color: rgba(0,0,0,0);
}

.form__input-block input:focus:-ms-input-placeholder, .form__input-block textarea:focus:-ms-input-placeholder {
  color: rgba(0,0,0,0);
}

.form__input-block input:focus::-ms-input-placeholder, .form__input-block textarea:focus::-ms-input-placeholder {
  color: rgba(0,0,0,0);
}

.form__input-block input:focus::placeholder,
.form__input-block textarea:focus::placeholder {
  color: rgba(0,0,0,0);
}

.form__input-block textarea {
  resize: none;
  overflow: hidden;
  min-height: 50px;
  max-height: 100px;
  margin-top: 30px;
}

.form__send-block {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-column-gap: 40px;
     -moz-column-gap: 40px;
          column-gap: 40px;
  row-gap: 40px;
}
/* ... */

